--- a/src/editor/Makefile-depend
+++ b/src/editor/Makefile-depend
@@ -1,9 +1,9 @@
 $(OBJ)/editor.o: editor.cc ../include/screen.h ../include/desc_data.h \
-  ../include/defs.h ../include/editor.h ../include/constants.h \
-  ../include/comm.h ../include/db.h ../include/creature.h \
-  ../include/combat_data_list.h ../include/safe_list.h \
-  ../include/structs.h ../include/macros.h ../include/obj_data.h \
-  ../include/xml_utils.h /usr/include/libxml2/libxml/parser.h \
+  ../include/defs.h ../include/constants.h ../include/comm.h \
+  ../include/db.h ../include/creature.h ../include/combat_data_list.h \
+  ../include/safe_list.h ../include/structs.h ../include/macros.h \
+  ../include/obj_data.h ../include/xml_utils.h \
+  /usr/include/libxml2/libxml/parser.h \
   /usr/include/libxml2/libxml/xmlversion.h \
   /usr/include/libxml2/libxml/xmlexports.h \
   /usr/include/libxml2/libxml/tree.h \
@@ -27,6 +27,6 @@ $(OBJ)/editor.o: editor.cc ../include/screen.h ../include/desc_data.h \
   /usr/local/pgsql/include/libpq-fe.h \
   /usr/local/pgsql/include/postgres_ext.h ../include/utils.h \
   ../include/login.h ../include/boards.h ../include/mail.h \
-  ../include/player_table.h
+  ../include/editor.h ../include/player_table.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 OBJFILES= $(OBJ)/editor.o
