--- a/src/map/Makefile-depend
+++ b/src/map/Makefile-depend
@@ -1,10 +1,9 @@
 $(OBJ)/Mapper.o: Mapper.cc ../include/Mapper.h ../include/screen.h \
-  ../include/desc_data.h ../include/defs.h ../include/editor.h \
-  ../include/constants.h ../include/comm.h ../include/db.h \
-  ../include/creature.h ../include/combat_data_list.h \
-  ../include/safe_list.h ../include/structs.h ../include/macros.h \
-  ../include/obj_data.h ../include/xml_utils.h \
-  /usr/include/libxml2/libxml/parser.h \
+  ../include/desc_data.h ../include/defs.h ../include/constants.h \
+  ../include/comm.h ../include/db.h ../include/creature.h \
+  ../include/combat_data_list.h ../include/safe_list.h \
+  ../include/structs.h ../include/macros.h ../include/obj_data.h \
+  ../include/xml_utils.h /usr/include/libxml2/libxml/parser.h \
   /usr/include/libxml2/libxml/xmlversion.h \
   /usr/include/libxml2/libxml/xmlexports.h \
   /usr/include/libxml2/libxml/tree.h \
