--- a/src/net/Makefile-depend
+++ b/src/net/Makefile-depend
@@ -20,11 +20,11 @@ $(OBJ)/ban.o: ban.cc ../include/structs.h ../include/defs.h ../include/macros.h 
   /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
   ../include/creature_list.h ../include/creature.h \
   ../include/combat_data_list.h ../include/safe_list.h \
-  ../include/account.h ../include/desc_data.h ../include/editor.h \
-  ../include/interpreter.h ../include/room_data.h ../include/search.h \
-  ../include/weather.h ../include/zone_data.h ../include/ban.h \
-  ../include/utils.h ../include/comm.h ../include/handler.h \
-  ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
+  ../include/account.h ../include/desc_data.h ../include/interpreter.h \
+  ../include/room_data.h ../include/search.h ../include/weather.h \
+  ../include/zone_data.h ../include/ban.h ../include/utils.h \
+  ../include/comm.h ../include/handler.h ../include/db.h \
+  /usr/local/pgsql/include/libpq-fe.h \
   /usr/local/pgsql/include/postgres_ext.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/comm.o: comm.cc ../include/macros.h ../include/structs.h \
@@ -49,15 +49,15 @@ $(OBJ)/comm.o: comm.cc ../include/macros.h ../include/structs.h \
   /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
   ../include/creature_list.h ../include/creature.h \
   ../include/combat_data_list.h ../include/safe_list.h \
-  ../include/account.h ../include/desc_data.h ../include/editor.h \
-  ../include/interpreter.h ../include/room_data.h ../include/search.h \
-  ../include/weather.h ../include/zone_data.h ../include/ban.h \
-  ../include/spells.h ../include/utils.h ../include/comm.h \
-  ../include/security.h ../include/screen.h ../include/handler.h \
-  ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/house.h \
-  ../include/vehicle.h ../include/help.h ../include/accstr.h \
-  ../include/player_table.h ../include/prog.h
+  ../include/account.h ../include/desc_data.h ../include/interpreter.h \
+  ../include/room_data.h ../include/search.h ../include/weather.h \
+  ../include/zone_data.h ../include/ban.h ../include/spells.h \
+  ../include/utils.h ../include/comm.h ../include/security.h \
+  ../include/screen.h ../include/handler.h ../include/db.h \
+  /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/editor.h \
+  ../include/house.h ../include/vehicle.h ../include/help.h \
+  ../include/accstr.h ../include/player_table.h ../include/prog.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/gnetsys.o: gnetsys.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -81,10 +81,10 @@ $(OBJ)/gnetsys.o: gnetsys.cc ../include/structs.h ../include/defs.h \
   /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
   ../include/creature_list.h ../include/creature.h \
   ../include/combat_data_list.h ../include/safe_list.h \
-  ../include/account.h ../include/desc_data.h ../include/editor.h \
-  ../include/interpreter.h ../include/room_data.h ../include/search.h \
-  ../include/weather.h ../include/zone_data.h ../include/ban.h \
-  ../include/comm.h ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
+  ../include/account.h ../include/desc_data.h ../include/interpreter.h \
+  ../include/room_data.h ../include/search.h ../include/weather.h \
+  ../include/zone_data.h ../include/ban.h ../include/comm.h \
+  ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
   /usr/local/pgsql/include/postgres_ext.h ../include/utils.h \
   ../include/spells.h ../include/handler.h ../include/mail.h \
   ../include/screen.h ../include/help.h ../include/char_class.h \
@@ -114,16 +114,16 @@ $(OBJ)/nanny.o: nanny.cc ../include/structs.h ../include/defs.h \
   /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
   ../include/creature_list.h ../include/creature.h \
   ../include/combat_data_list.h ../include/safe_list.h \
-  ../include/account.h ../include/desc_data.h ../include/editor.h \
-  ../include/interpreter.h ../include/room_data.h ../include/search.h \
-  ../include/weather.h ../include/zone_data.h ../include/ban.h \
-  ../include/comm.h ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/utils.h \
-  ../include/spells.h ../include/handler.h ../include/mail.h \
-  ../include/screen.h ../include/help.h ../include/char_class.h \
-  ../include/actions.h ../include/mobact.h ../include/clan.h \
-  ../include/vehicle.h ../include/house.h ../include/login.h \
-  ../include/bomb.h ../include/security.h ../include/quest.h \
-  ../include/player_table.h ../include/language.h
+  ../include/account.h ../include/desc_data.h ../include/interpreter.h \
+  ../include/room_data.h ../include/search.h ../include/weather.h \
+  ../include/zone_data.h ../include/ban.h ../include/comm.h \
+  ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/editor.h \
+  ../include/utils.h ../include/spells.h ../include/handler.h \
+  ../include/mail.h ../include/screen.h ../include/help.h \
+  ../include/char_class.h ../include/actions.h ../include/mobact.h \
+  ../include/clan.h ../include/vehicle.h ../include/house.h \
+  ../include/login.h ../include/bomb.h ../include/security.h \
+  ../include/quest.h ../include/player_table.h ../include/language.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 OBJFILES= $(OBJ)/ban.o $(OBJ)/comm.o $(OBJ)/gnetsys.o $(OBJ)/nanny.o
