--- a/src/quest/Makefile-depend
+++ b/src/quest/Makefile-depend
@@ -20,13 +20,12 @@ $(OBJ)/quest.o: quest.cc /usr/include/libxml2/libxml/parser.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
   ../include/creature_list.h ../include/creature.h \
   ../include/combat_data_list.h ../include/safe_list.h \
-  ../include/account.h ../include/desc_data.h ../include/editor.h \
-  ../include/interpreter.h ../include/room_data.h ../include/search.h \
-  ../include/weather.h ../include/zone_data.h ../include/ban.h \
-  ../include/comm.h ../include/utils.h ../include/db.h \
-  /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h \
-  ../include/quest.h ../include/player_table.h ../include/handler.h \
-  ../include/screen.h ../include/security.h
+  ../include/account.h ../include/desc_data.h ../include/interpreter.h \
+  ../include/room_data.h ../include/search.h ../include/weather.h \
+  ../include/zone_data.h ../include/ban.h ../include/comm.h \
+  ../include/utils.h ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/editor.h \
+  ../include/spells.h ../include/quest.h ../include/player_table.h \
+  ../include/handler.h ../include/screen.h ../include/security.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 OBJFILES= $(OBJ)/quest.o
